--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 a       { text-decoration: none; color: #FFF000; }
-a:hover { text-decoration: underline; }
+a:hover { color: #FFF; }
 
 ul { list-style-image: url("../images/bullet.gif"); }
 
@@ -24,7 +24,7 @@ h1, h2, h3, h4,
 strong, .strong {
     text-transform: uppercase;
     font-family: "Arial Black", Gadget, Arial, sans-serif;
-    font-weight: 900;
+    font-weight: 600;
 }
 
 strong {
@@ -65,14 +65,15 @@ em {
     color: #FFF;
 }
 
-#col-right ul a { color: #FFF; }
+#col-right a { color: #FFF; }
+#col-right a:hover { color: #FFF000; }
 
 h1#logo {
     color: #FFF;
     margin: auto;
     padding: 80px 0 200px 0;
-    font-size: 4em;
-    line-height: 0.65em;
+    font-size: 3.5em;
+    line-height: 0.77em;
     text-align: center;
 }
 
@@ -90,13 +91,26 @@ h1#logo {
 #col-right h4 { color: #EC155B; }
 
 ul#nav {
-    list-style-image: url("../images/star1.jpg");
+    padding: 0;
+    list-style: none;
     line-height: 1.5em;
 }
 
 ul.boxed {
     list-style: none;
     line-height: 2em;
+}
+
+#nav a {
+    display: block;
+    text-indent: 32px;
+    background-image: url("../images/star1.jpg");
+    background-repeat: no-repeat;
+}
+#nav a:hover {
+    text-decoration: none;
+    color: #FFF000;
+    background-image: url("../images/star2.jpg");
 }
 
 /* CONTENT [434PX] ---------------------------------------------------------- */
